2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	* flumotion/component/misc/httpfile/httpfile.py:
	  If stop() is called without start() having been called, don't
	  traceback due to self._pbclient not existing, or being None

	* flumotion/manager/depgraph.py:
	  Comment-only change.

2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/consumers/httpstreamer/http.py:
	  Set setLogFilter, not non-existing addLogFilter, for streamer-wide
	  log filters (which we don't use, so this wouldn't have affected us).

2006-11-20  Michael Smith  <msmith@fluendo.com>

	* flumotion/component/misc/httpfile/httpfile.py:
	  Have a description; needed for streamdata.

2006-11-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/Makefile.am:
	Dist the glade file too.  Should fix the build really!

2006-11-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/Makefile.am:
	Actually dist the admin_gtk.  Should fix the build.

2006-11-20  Andy Wingo  <wingo@pobox.com>

	* flumotion/manager/manager.py (Vishnu._createErrback): If the
	worker claims to have a component that we don't know about, treat
	it as lost. This is clever and true!

	* flumotion/worker/worker.py (WorkerBrain.deferredCreate): 
	* flumotion/common/errors.py (ComponentAlreadyRunningError): New
	error, can be raised by a worker if it knows that it has a job
	running that perhaps the manager does not know about.

2006-11-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/twisted/pb.py:
	  Fix getFormatArgs module call

2006-11-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/launch/main.py:
	  Fix flumotion-launch.

2006-11-17  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/misc/httpfile/admin_gtk.py:
	Thanks pychecker.

2006-11-17  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
